# gpuslackbot

./: .gitignore  Dockerfile  LICENSE  README.md  gpuslackbot.py  manifest.json  pyproject.toml  requirements.txt  slack_app_manifest.json
src/: gpuslackbot.py
src/gpuslackbot/: gpuslackbot.py
systemd/system/: gpuslackbot.service
systemd/system/gpuslackbot.service.d/: gpuslackbot.conf
