[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpuslackbot"]
namespaces = false

[project]
name = "gpuslackbot"
license = {text = "MIT License"}
authors = [
  { name="Yani Ioannou", email="yani.ioannou@gmail.com" },
]
description = "Slack bot to show GPU usage on computers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynvml>=11.5.0",
    "slack_bolt>=1.16.4",
    "aiohttp>=3.8.4",
    "tqdm>=4.65.0",
    "psutil>=5.9.4"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/calgaryml/gpuslackbot"
"Bug Tracker" = "https://github.com/calgaryml/gpuslackbot/issues"